crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__starknet_domain.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub struct StarknetDomain {
    #[snip12(kind: "shortstring")]
    pub name: felt252,
    #[snip12(kind: "shortstring")]
    pub version: felt252,
    #[snip12(kind: "shortstring")]
    pub chainId: felt252,
    #[snip12(kind: "shortstring")]
    pub revision: felt252,
}
pub fn __STARKNET_DOMAIN_encoded_type() {
    println!(
        "\"StarknetDomain\"(\"name\":\"shortstring\",\"version\":\"shortstring\",\"chainId\":\"shortstring\",\"revision\":\"shortstring\")",
    );
}
pub const STARKNET_DOMAIN_TYPE_HASH: felt252 =
    0x1ff2f602e42168014d405a94f75e8a93d640751d71d16311266e140d8b0a210;



Diagnostics:

None

AuxData:

None
